--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,10 @@ name: Run Cypress Tests
 on:
   pull_request:
     branches:
-      - develop
+      - development
   push:
     branches:
-      - develop
+      - development
 
 jobs:
   build:
